[tool.poetry]
name = "digital-signal-processing"
version = "0.1.0"
description = ""
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
readme = "README.md"
packages = [{include = "digital_signal_processing"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.265"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
